bin_PROGRAMS = test_crc test_datagroups test_packets write_datagroups

test_crc_SOURCES = test_crc.cpp
test_crc_LDADD = -L../src -lmsc

test_datagroups_SOURCES = test_datagroups.cpp
test_datagroups_LDADD = -L../src -lmsc -lmot

test_packets_SOURCES = test_packets.cpp
test_packets_LDADD = -L../src -lmsc -lmot

write_datagroups_SOURCES = write_datagroups.cpp
write_datagroups_LDADD = -L../src -lmsc -lmot

write_packets_SOURCES = write_packets.cpp
write_packets_LDADD = -L../src -lmsc -lmot
